fix: prevent overflow on viewports 320 > 420
Testing on an iPhone 11 Pro revealed some overflow when
search dropdown is toggled. New settings allow viewport
to shrink to 320px before overflow occurs.

Refs: CD-469

--- a/components/cd/cd-header/cd-search.css
+++ b/components/cd/cd-header/cd-search.css
@@ -19,7 +19,7 @@
 }
 
 .cd-search__form .form-type-textfield {
-  flex: 1 0 auto;
+  flex: 1 1 auto;
 }
 
 .cd-search__form .form-actions {
